--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="middle-container">
       <div class="profile">
-          <img class="profile-img"src="images/101921_web size.jpg" alt="profile img">
+          <img class="profile-img"src="images/101921_Web Size.jpg" alt="profile img">
         <h2>Hello.</h2>
         <p class="intro">I am a retired Professional Hockey Player with a passion for Web Design, Triathlon, and Real Estate.</p>
       </div>
