--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
           <img class="skills-img" src="images/Champions logo.webp" alt="skills img">
 
           <h3>Sports Background</h3>
-          <p> Sports has played a major role in my life. I am a retire professional ice hockey player and have since picked up the sport of triathlon. Sports has taught me workt ethic, commitment, passion, and sacrafice.</p>
+          <p> Sports has played a major role in my life. Since retiring as a professional ice hockey player I've started competing in the sport of triathlon. Sports has taught me workt ethic, commitment, passion, and sacrafice.</p>
 
         </div>
         <div class="skill-row">
           <img class="kw-img" src="images/keller williams logo.jpeg" alt="needed-skill img">
           <h3>Real Estate Career</h3>
-          <p> These skills have allowed me to embark on a successful career in real estate helping my clients buy, sell, and invest.</p>
+          <p> The skills I've learned from my time of playing sports has allowed me to embark on a successful career in real estate where I help my clients buy, sell, and invest.</p>
         </div>
       </div>
       <hr>
